# rust-web-template

./: .env-sample  Cargo.toml  Readme.md  Readme.me
.github/workflows/: main.yml
docs/: database.md
migrations/: 20220209071248_users.sql  20220215121209_credentials.sql
src/: errors.rs  lib.rs  main.rs
src/config/: constants.rs  env.rs  mod.rs
src/config/db/: mod.rs  postgres.rs
src/config/redis/: mod.rs  redis.rs
src/dao/: credential_repo.rs  mod.rs  token_repo.rs  user_repo.rs
src/dto/: auth.rs  mod.rs  user.rs
src/models/: auth.rs  credential.rs  db.rs  mod.rs  redis.rs  token.rs  user.rs
src/routers/: auth.rs  home.rs  jwt.rs  mod.rs  users.rs
src/services/: auth.rs  mod.rs  user.rs
