[package]
name = "cashbook"
version = "0.1.0"
edition = "2021"
default-run = "cashbook"

[lib]
name = "cashbook"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
axum = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres", "uuid" ] }
anyhow = "1.0"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "0.8", features = ["v4", "serde"] }

[dev-dependencies]
mockall = "0.11"